(This file, NEWS, lists new features and enhancements. See CHANGES for fixes.)

<unreleased>

  * Bracketed paste now consults the AutoIndent flag to determine whether to
    preserve the cursor's initial horizontal offset. It's like a block
    level auto indent rather than a line-by-line (and therefore
    cumulative) auto indent. Being created internally by the Shift command
    the introduced leading space also honors the Tabs and ShiftTabs flags.

3.3.3 2023-10-19

  * BracketedPaste support has been added; turns off AutoIndent when
    pasting text from the system clipboard.

3.3.2 2022-09-13

  * Paste and PasteVert now set two bookmarks designated '<' and '>' which
    are set to the start and end of the most recently pasted text. Accessed
    by the "GotoBookmark <" and "GotoBookmark >" commands. Two associated
    menu items have been added to the "Search" menu.

  * Added toml.jsf syntax.

  * Support '_' in numeric constants, binary and hex constants, imaginary
    numbers in go.jsf syntax.

  * Now there is an uninstall target that uninstalls ne.

  * Additionally load key bindings from ~/.ne/.keys-${TERM}

3.3.1 2021-05-16

  * The makefile has been made more distro friendly by making it possible
    to override all compiler and linker options.

  * A workaround has been implemented to make --ansi (mostly) work when
    compiling with ncurses. A change to ncurses in 2012 made tgoto() not
    working unless tgetent()/setupterm() are called first.

3.3.0 2020-02-27

  * You can now Save (^A) named documents from within the
    SelectDoc (F4) requester.

  * The mark, if set, is visible.

  * Warning about opening a document with the same name as an existing
    document now considers the fully qualified canonical path and name
    of each rather than just their basenames.

  * Status bar Modified flag (*) may also be underlined, indicating the
    corresponding file's modification time has changed since the document
    was loaded or saved.
